--- a/index.html
+++ b/index.html
@@ -237,17 +237,17 @@
                 <h2 class="section-title">What Our Customers Say</h2>
                 <div class="testimonial-slider">
                     <div class="testimonial-slide">
-                        <img src="images/salman.jpg" alt="Customer 1" class="customer-img">
+                        <img src="salman.jpg" alt="Customer 1" class="customer-img">
                         <p class="quote">"This service changed my life! I found everything I needed in one place."</p>
                         <h4>- John Doe</h4>
                     </div>
                     <div class="testimonial-slide">
-                        <img src="images/kat.jpg" alt="Customer 2" class="customer-img">
+                        <img src="kat.jpg" alt="Customer 2" class="customer-img">
                         <p class="quote">"Great experience, very easy to use, and fantastic support team!"</p>
                         <h4>- Jane Smith</h4>
                     </div>
                     <div class="testimonial-slide">
-                        <img src="images/ramesh.jpg" alt="Customer 3" class="customer-img">
+                        <img src="ramesh.jpg" alt="Customer 3" class="customer-img">
                         <p class="quote">"Fast, reliable, and trustworthy service. Highly recommend!"</p>
                         <h4>- Mark Wilson</h4>
                     </div>
